# xdk

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  PUBLISHING.md  README.md  debug_strip.rs  oapi_short.yaml  openapi.json  package-lock.json  test_method_naming.json  test_method_naming.rs  test_tag_mapping.rs  xdk-config.toml
xdk-build/: Cargo.toml  README.md
xdk-build/src/: elixir.rs  error.rs  generator.rs  logging.rs  main.rs  python.rs  ruby.rs  typescript.rs  utils.rs
xdk-gen/: Cargo.toml  README.md
xdk-gen/examples/: generate_python_sdk.rs
xdk-gen/src/: error.rs  lib.rs
xdk-gen/src/common/: casing.rs
xdk-gen/src/core/: error.rs  generator.rs  mod.rs  models.rs  utils.rs
xdk-gen/src/elixir/: generator.rs  mod.rs
xdk-gen/src/python/: generator.rs  mod.rs  models.rs  render.rs  utils.rs
xdk-gen/src/ruby/: generator.rs  mod.rs
xdk-gen/src/typescript/: generator.rs  mod.rs
xdk-gen/templates/elixir/: client_class.j2  errors.j2  gitignore.j2  main_client.j2  mix_exs.j2  paginator.j2  query.j2  readme.j2  streaming.j2  test_helper.j2  test_structure.j2
xdk-gen/templates/python/: client.j2  client_class.j2  client_macros.j2  client_module.j2  clients.j2  generate_docs_simple.j2  gitignore.j2  init_py.j2  main_client.j2  models.j2  oauth1_auth.j2  oauth2_auth.j2  paginator.j2  process_for_mintlify.j2  pyproject_toml.j2  readme.j2  requirements_txt.j2  setup_py.j2  sphinx_conf.j2  streaming.j2  streaming_client_class.j2  test_contracts.j2  test_generic.j2  test_pagination.j2  test_structure.j2  watch_docs.j2
xdk-gen/templates/ruby/: client_class.j2  gemfile.j2  gemspec.j2  gitignore.j2  lib_entry.j2  main_client.j2  models.j2  readme.j2  spec_helper.j2  test_contracts.j2  test_structure.j2  (+1 more)
xdk-lib/: Cargo.toml
xdk-lib/src/: casing.rs  config.rs  generator.rs  lib.rs  logging.rs  mod.rs  models.rs  openapi.rs  templates.rs  testing.rs  utils.rs
xdk-lib/tests/: casing_tests.rs  error_tests.rs  integration_tests.rs  lib.rs  models_tests.rs  testing_tests.rs
(+2255 files in other folders)
