[package]
name = "xdk-build"
version = "0.1.0"
edition = "2024"

[dependencies]
xdk-gen = { path = "../xdk-gen" }
xdk-openapi = { path = "../xdk-openapi" }
xdk-lib = { path = "../xdk-lib" }
clap = { version = "4.5.42", features = ["derive"] }
colored = "2.2"
thiserror = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.47", features = ["full"] }
