[package]
name = "xdk-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
openapi = { path = "../xdk-openapi", package = "xdk-openapi" }
minijinja = "2.9.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.2.0"

[[example]]
name = "generate_python_sdk"
path = "examples/generate_python_sdk.rs"
