[package]
name = "xdk-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
xdk-openapi = { path = "../xdk-openapi" }
xdk-lib = { path = "../xdk-lib" }
minijinja = "2.9.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.2.0"
