[package]
name = "xdk-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
openapi = { path = "../xdk-openapi", package = "xdk-openapi" }
minijinja = "2.11.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
colored = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
